--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -22,14 +22,14 @@ header
 	height: 100px;
 	width: 910px;
 	padding: 25px;
-	background-color: blue;
+	background-color: red;
 	margin-bottom: 10px;
 }
 
 nav
 {
 	width: 940px;
-	background-color: purple;
+	background-color: orange;
 	padding: 10px;
 	margin-bottom: 10px;
 }
@@ -45,7 +45,7 @@ aside
 	width: 200px;
 	padding: 10px;
 	margin: 0 10px 10px 0;
-	background-color: red;
+	background-color: yellow;
 	float: left;
 }
 
@@ -60,6 +60,6 @@ section
 
 footer
 {
-	background-color: orange;
+	background-color: blue;
 	clear: both;
 }
